--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Chess Coach</title>
+  <title>Play Coach</title>
 
   <!-- Chessboard CSS -->
   <link rel="stylesheet"
@@ -21,15 +21,18 @@
 </head>
 
 <body>
-  <h1>Chess Coach</h1>
+  <h1>Play Coach</h1>
   <p id="status">Faça um lance</p>
 
   <div id="board"></div>
 
+  <!-- ✅ jQuery (OBRIGATÓRIO) -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
   <!-- Chess.js -->
   <script src="https://unpkg.com/chess.js@1.0.0/chess.min.js"></script>
 
-  <!-- Chessboard.js -->
+  <!-- Chessboard.js (DEPENDE DE JQUERY) -->
   <script src="https://unpkg.com/chessboardjs@1.0.0/www/js/chessboard.js"></script>
 
   <!-- Stockfish -->
