--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div id="board"></div>
 
   <!-- Chess.js (regras do jogo) -->
-  <script src="https://unpkg.com/chess.js@1.0.0/chess.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chess.js@1.0.0/chess.min.js"></script>
 
   <!-- Chessground -->
   <script src="https://unpkg.com/chessground@8.2.1/dist/chessground.min.js"></script>
