--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <style>
     body {
       margin: 0;
-      background: #111;
-      color: #ccc;
+      background: #000; /* TRUE BLACK */
+      color: #9e9e9e;
       font-family: Inter, sans-serif;
       display: flex;
       justify-content: center;
@@ -22,32 +22,35 @@
     .app {
       width: 100%;
       max-width: 420px;
-      padding: 16px;
+      padding: 12px;
     }
 
     h1 {
-      font-size: 16px;
+      font-size: 14px;
       font-weight: 500;
       text-align: center;
-      margin: 8px 0 12px;
-      color: #888;
+      margin: 6px 0 10px;
+      color: #777;
     }
 
     #status {
       text-align: center;
-      font-size: 13px;
-      margin-bottom: 12px;
+      font-size: 12px;
+      margin-bottom: 10px;
       color: #666;
     }
 
-    /* 🔑 TABULEIRO ZEN */
+    /* ♟️ TABULEIRO ZEN – SEM BUG DE DIMENSÃO */
     #board {
-      width: 100%;
-      aspect-ratio: 1 / 1;        /* garante quadrado perfeito */
+      width: 92vw;
+      height: 92vw;           /* 🔑 força altura */
+      max-width: 360px;
+      max-height: 360px;
+      margin: 0 auto;
       display: grid;
       grid-template-columns: repeat(8, 1fr);
       grid-template-rows: repeat(8, 1fr);
-      border-radius: 8px;
+      border-radius: 6px;
       overflow: hidden;
     }
 
@@ -57,34 +60,35 @@
       justify-content: center;
       user-select: none;
       touch-action: manipulation;
-      font-size: min(7vw, 32px);  /* peças proporcionais */
+      font-size: min(8vw, 34px);
     }
 
+    /* Cores estilo Lichess Zen */
     .light {
-      background: #f5f5f5;
+      background: #f2f2f2;
     }
 
     .dark {
-      background: #b8b8b8;
+      background: #b5b5b5;
     }
 
     .selected {
-      background: #a3c9f9 !important;
+      background: #90caf9 !important;
     }
 
     .actions {
-      margin-top: 12px;
+      margin-top: 10px;
       display: flex;
       justify-content: center;
     }
 
     button {
       background: transparent;
-      border: 1px solid #333;
-      color: #888;
-      padding: 8px 16px;
+      border: 1px solid #222;
+      color: #777;
+      padding: 6px 14px;
       border-radius: 6px;
-      font-size: 13px;
+      font-size: 12px;
     }
   </style>
 </head>
