--- a/index.html
+++ b/index.html
@@ -61,6 +61,24 @@
       user-select: none;
       touch-action: manipulation;
       font-size: min(8vw, 34px);
+      font-weight: 600;
+    }
+
+/* ♙ Peças brancas – mais contraste */
+.white-piece {
+  color: #ffffff;
+  text-shadow:
+    0 1px 1px rgba(0,0,0,0.6),
+    0 0 2px rgba(0,0,0,0.4);
+}
+
+/* ♟ Peças pretas – levemente suavizadas */
+.black-piece {
+  color: #111;
+  text-shadow:
+    0 1px 1px rgba(255,255,255,0.15);
+}
+
     }
 
     /* Cores estilo Lichess Zen */
