Update background colors for light and dark themes

--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
 
     /* Cores estilo Lichess Zen */
     .light {
-      background: #f2f2f2;
+      background: #e6dccf;
     }
 
     .dark {
-      background: #b5b5b5;
+      background: #b89b7b;
     }
 
     .selected {
