Add script tag for rules.js in index.html

--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
       <button onclick="resetGame()">Reiniciar</button>
     </div>
   </div>
-
+  
+  <script src="rules.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
