--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
       justify-content: center;
     }
 
+    .legal-move {
+  box-shadow: inset 0 0 0 3px rgba(0,0,0,0.25);
+}
+
+.capture {
+  box-shadow: inset 0 0 0 3px rgba(120, 0, 0, 0.6);
+}
+
+
     button {
       background: transparent;
       border: 1px solid #222;
