--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@
 
     /* Cores estilo Lichess Zen */
     .light {
-      background: #ddd1c4;
+      background: #dad5b7;
     }
 
     .dark {
-      background: #b08a66;
+      background: #c2b79b;
     }
 
     .selected {
-      background: #90caf9 !important;
+      background: #ff6e4a !important;
     }
 
     .actions {
