Add feedback.js script to index.html

--- a/index.html
+++ b/index.html
@@ -134,5 +134,6 @@
   
   <script src="rules.js"></script>
   <script src="app.js"></script>
+  <script src="feedback.js"></script>
 </body>
 </html>
