--- a/index.html
+++ b/index.html
@@ -58,5 +58,8 @@ body {
 </head>
 
 <body>
-
-<div id="board"></div
+  <main id="app">
+    <section id="hud"></section>
+    <section id="board"></section>
+  </main>
+</body
